@@ -129,6 +129,9 @@
     .name {
         margin-bottom: 0.25em;
         display: inline-block;
+        & > div {
+            display: inline-block;
+        }
     }
 
     .private-flag {
@@ -142,6 +145,9 @@
     .job {
         font-size: 1.25em;
         color: #888;
+        & > div {
+            display: inline-block;
+        }
     }
 
     .picture {
