@@ -1,3 +1,7 @@
+* 2013-03-08 - viktor.pracht@open-xchange.com
+
+ - Implemented story 44467347: Implement Japanese furigana fields in contacts.
+
 * 2013-02-19 - viktor.pracht@open-xchange.com
 
  - Implemented story 44079663: User can see inbox information in the unified mail overview
